syntax = "proto3";

import "gender.proto";
import "google/protobuf/timestamp.proto";

package services;
option go_package="./services";
/* type of API in gRPC
- unary 
- server streaming
- client streaming
- bi directional streaming
*/
service Calculator {
    rpc Hello(HelloRequest) returns(HelloResponse); // unary
    rpc Fibonacci(FibonacciRequest) returns(stream FibonacciResponse); // server streaming
    rpc Average(stream AverageRequest) returns(AverageResponse); // client streaming
    rpc Sum(stream SumRequest) returns(stream SumResponse); // bi directional streaming
}

message HelloRequest {
    string name = 1 ;
    google.protobuf.Timestamp create_date = 2;
}

message HelloResponse {
    string result = 1;
} 

message Person {
    string name = 1 ;
    int32 age = 2 ;
    float weight = 3 ;
    double height = 4;
    bool active = 5 ;
    repeated string phone_number = 6 ;
    Gender gender = 7;
    map<string,sgtring> contries = 8;
    google.protobuf.Timestamp create_date = 9;  
}

message FibonacciRequest {
    uint32 n = 1;
}

message FibonacciResponse {
    uint32 result = 1;
}

message AverageRequest {
    double number = 1;
}

message AverageResponse {
    double result = 1;
}

message SumRequest {
    int32 number = 1;
}

message SumResponse {
    int32 number = 1;
}
